build-logs-failed/build-HTF-0.15.0.2.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - HTF-0.15.0.2 (lib) (first run)
 - HTF-0.15.0.2 (exe:htfpp) (first run)
 - HTF-0.15.0.2 (test:TestThreadPools) (first run)
 - HTF-0.15.0.2 (test:TestHTF) (first run)
 - HTF-0.15.0.2 (test:MiscTests) (first run)
Configuring library for HTF-0.15.0.2...
Preprocessing library for HTF-0.15.0.2...
Building library for HTF-0.15.0.2...
[ 1 of 24] Compiling Paths_HTF
[ 2 of 24] Compiling Test.Framework.Colors
[ 3 of 24] Compiling Test.Framework.Diff
[ 4 of 24] Compiling Test.Framework.Location
[ 5 of 24] Compiling Test.Framework.Preprocessor
[ 6 of 24] Compiling Test.Framework.Pretty
[ 7 of 24] Compiling Test.Framework.Process
[ 8 of 24] Compiling Test.Framework.TestInterface
[ 9 of 24] Compiling Test.Framework.History
[10 of 24] Compiling Test.Framework.AssertM

Test/Framework/AssertM.hs:64:5: warning: [-Wnoncanonical-monad-instances]
    Noncanonical ‘return’ definition detected
    in the instance declaration for ‘Monad AssertBool’.
    ‘return’ will eventually be removed in favour of ‘pure’
    Either remove definition for ‘return’ (recommended) or define as ‘return = pure’
    See also: https://gitlab.haskell.org/ghc/ghc/-/wikis/proposal/monad-of-no-return
   |
64 |     return = AssertOk
   |     ^^^^^^^^^^^^^^^^^
[11 of 24] Compiling Test.Framework.TestTypes
[12 of 24] Compiling Test.Framework.JsonOutput
[13 of 24] Compiling Test.Framework.ThreadPool
[14 of 24] Compiling Test.Framework.Tutorial
[15 of 24] Compiling Test.Framework.Utils
[16 of 24] Compiling Test.Framework.QuickCheckWrapper
[17 of 24] Compiling Test.Framework.PrettyHaskell
[18 of 24] Compiling Test.Framework.HUnitWrapper
[19 of 24] Compiling Test.Framework.XmlOutput
[20 of 24] Compiling Test.Framework.TestReporter
[21 of 24] Compiling Test.Framework.CmdlineOptions
[22 of 24] Compiling Test.Framework.TestManager
[23 of 24] Compiling Test.Framework.BlackBoxTest
[24 of 24] Compiling Test.Framework
Configuring executable 'htfpp' for HTF-0.15.0.2...
Preprocessing executable 'htfpp' for HTF-0.15.0.2...
Building executable 'htfpp' for HTF-0.15.0.2...
[1 of 4] Compiling Paths_HTF
[2 of 4] Compiling Test.Framework.Location
[3 of 4] Compiling Test.Framework.Preprocessor
[4 of 4] Compiling Main
[5 of 5] Linking /tmp/workdir-HTF/HTF-0.15.0.2/dist-newstyle/build/x86_64-linux/ghc-9.6.6/HTF-0.15.0.2/x/htfpp/build/htfpp/htfpp
Configuring test suite 'TestThreadPools' for HTF-0.15.0.2...
Preprocessing test suite 'TestThreadPools' for HTF-0.15.0.2...
Building test suite 'TestThreadPools' for HTF-0.15.0.2...
[1 of 1] Compiling Main
[2 of 2] Linking /tmp/workdir-HTF/HTF-0.15.0.2/dist-newstyle/build/x86_64-linux/ghc-9.6.6/HTF-0.15.0.2/t/TestThreadPools/build/TestThreadPools/TestThreadPools
Configuring test suite 'TestHTF' for HTF-0.15.0.2...
Preprocessing test suite 'TestHTF' for HTF-0.15.0.2...
Building test suite 'TestHTF' for HTF-0.15.0.2...

tests/Foo/A.hs:1:1: error:
    ./scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF ./scripts/local-htfpp #-}
  | ^

tests/Foo/B.hs:1:1: error:
    ./scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF ./scripts/local-htfpp #-}
  | ^

tests/TestHTF.hs:1:1: error:
    ./scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# LANGUAGE OverloadedStrings #-}
  | ^

tests/Tutorial.hs:1:1: error:
    ./scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF ./scripts/local-htfpp #-}
  | ^

tests/real-bbt/FailFast.hs:1:1: error:
    ./scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF ./scripts/local-htfpp #-}
  | ^

tests/real-bbt/MaxCurTime.hs:1:1: error:
    scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF scripts/local-htfpp #-}
  | ^

tests/real-bbt/MaxPrevTime.hs:1:1: error:
    scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF scripts/local-htfpp #-}
  | ^

tests/real-bbt/PrevFactor.hs:1:1: error:
    scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF scripts/local-htfpp #-}
  | ^

tests/real-bbt/Repeat.hs:1:1: error:
    ./scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF ./scripts/local-htfpp #-}
  | ^

tests/real-bbt/SortByPrevTime.hs:1:1: error:
    scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF scripts/local-htfpp #-}
  | ^

tests/real-bbt/UniqTests1.hs:1:1: error:
    scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# OPTIONS_GHC -F -pgmF scripts/local-htfpp #-}
  | ^

tests/real-bbt/UniqTests2.hs:1:1: error:
    scripts/local-htfpp: builderMainLoop: posix_spawnp: permission denied (Permission denied)
  |
1 | {-# LANGUAGE LambdaCase #-}
  | ^
Error: [Cabal-7125]
Failed to build test:TestHTF from HTF-0.15.0.2.

